--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,24 @@ img {
     margin: 0 auto; /* Center the image horizontally */
 }
 
+img {
+    width: 240px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
+    display: block; /* Ensure it's a block element to center it horizontally */
+    margin: 0 auto; /* Center the image horizontally */
+}
+
+.fed-logo img {
+    height: 64px; /* Set the width to 96px for images inside .fed-logo */
+    width: auto; /* Maintain aspect ratio */
+    padding: 24px;
+}
+
+.fed-logo {
+    height: 64px;
+    width: auto;
+}
+
 .calendar-item {
     padding-left: 20px;
     padding-right: 20px;
@@ -75,6 +93,24 @@ img {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     background-color: #162A3D;
+}
+
+.header-wrapper {
+    display: flex;
+    padding: 32px 0; /* Remove horizontal padding and keep top and bottom padding */
+    justify-content: space-between;
+    align-items: center;
+    gap: 48px;
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.logo-lockup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0px;
 }
 
 .calendar-date {
