--- a/styles.css
+++ b/styles.css
@@ -251,4 +251,8 @@ img {
         grid-template-columns: repeat(auto-fill, minmax(100%, 1fr)); /* One item per row on mobile */
         padding: 12px;
     }
+
+    fed-logo {
+        display: none; /* Hide the fed-logo on mobile */
+    }
 }
